--- a/css/global.css
+++ b/css/global.css
@@ -290,3 +290,322 @@ body {
 	}
 }
 /* #endregion */
+
+/* #region Annotations and other custom styles*/
+.note {
+	color: var(--gray);
+	--adjacent-spacing: calc(var(--border-width) + 1em);
+	body:not(.compact) :is(d-box, d-choices, d-option-panel) + & { margin-block-start: var(--adjacent-spacing) }
+	body:not(.compact) &:has(+ d-box, + d-choices, + d-option-panel) { margin-block-end: var(--adjacent-spacing) }
+	&:first-child, .selection-label + & { margin-block-start: 0 }
+	&:last-child { margin-block-end: 0 }
+}
+/* #endregion */
+
+/* #region Game styles */
+d-box, d-choices {
+	&:not(:state(compact)) {
+		/* Space out
+		 * Increase spacing between neighboring boxes to account for border outset */
+		margin: var(--border-width) calc(1.5 * var(--border-width));
+		:is(d-box, d-choices, d-option-panel) + & { margin-block-start: calc((2 * var(--border-width)) + 0.2em) }
+
+		padding: 0.1em 0.2em;
+		font-size: 1.3em;
+		line-height: 1;
+		min-height: 3.5em;
+		width: 17.3em;
+		max-width: 100%;
+		background-color: var(--black);
+		border-image: url("../assets/images/textbox/light.png") 16 / var(--border-width) / var(--border-width);
+
+		&[theme=dark] {
+			border-image-source: url("../assets/images/textbox/dark.gif");
+		}
+	}
+
+	&:state(compact) {
+		margin: 0 1em;
+		gap: 0 0.5ch;
+		align-items: baseline;
+	}
+}
+d-box {
+	display: grid;
+	grid-template-columns: auto 1fr;
+
+	&:has(&) {
+		position: relative;
+	}
+
+	&:not(:state(compact)) & {
+		position: absolute;
+		font-size: 0.6em;
+		/* Reset full-size features */
+		background-color: transparent;
+		border-image: unset;
+		margin: 0;
+		width: max-content;
+		height: unset;
+		/* Center content */
+		align-items: center;
+
+		d-text:first-of-type { margin-block-start: 0.5em }
+
+		/* Specify placements (defaulting to bottom right) */
+		&:not([place]), &:not([place~=bottom], [place~=top]),
+		&[place~=bottom] { bottom: -0.6em }
+		&:not([place]), &:not([place~=right], [place~=left]),
+		&[place~=right] { right: 0 }
+		&[place~=top] { top: -0.6em }
+		&[place~=left] { left: 0 }
+		&[place~=center-x] {
+			left: 50%;
+			transform: translateX(-50%);
+		}
+		&[place~=center-y] {
+			top: 50%;
+			transform: translateY(-50%);
+		}
+		&[place~=center] {
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
+	}
+
+	&:state(compact) & {
+		margin-inline-start: 0;
+		& d-speaker::before {
+			content: "(";
+			color: var(--white);
+		}
+		& > :last-child::after { content: ")" }
+	}
+
+	&:has(> d-box:first-child) {
+		grid-template-columns: 1fr;
+		d-speaker::before,
+		d-box > :last-child::after { content: unset }
+	}
+}
+d-sprite {
+	grid-row: 1 / span 3;
+	grid-column: 1;
+	d-box:state(compact) & { display: contents }
+
+	/* Center sprite */
+	d-box:not(:state(compact)) & {
+		display: flex;
+		align-items: center;
+		margin-inline-end: 1ch;
+	}
+
+	img {
+		--size: 3em;
+		width: var(--size);
+		height: var(--size);
+		object-fit: contain;
+		d-box:state(compact) & { display: none }
+	}
+
+}
+d-speaker {
+	color: var(--lightyellow);
+	&::after { content: ":" }
+	d-box:not(:state(compact)) & { display: none }
+	d-box:state(compact) & {
+		grid-column: 1;
+		grid-row: 1 / span 3;
+	}
+}
+d-text {
+	grid-column: 2;
+	line-height: 1.1;
+
+	&[asterisk] {
+		padding-inline-start: 2ch;
+		text-indent: -2ch;
+
+		&::before {
+			content: "*";
+			margin-inline-end: 1ch;
+		}
+	}
+}
+d-choices {
+	&:not(:state(compact)) {
+		display: grid;
+		--side-width: 5em;
+		grid-template-columns: 1fr auto 1fr;
+		padding-block: 0;
+		padding-inline: 1.24em 0.15em;
+		align-items: center;
+		position: relative;
+
+		&:not(:state(forced)):not(:has(d-option:hover), :focus-within, :has([aria-expanded="true"])) {
+			&::after {
+				content: "";
+				background: url("../assets/images/heart.png") center / contain no-repeat;
+				width: var(--size);
+				height: var(--size);
+				position: absolute;
+				left: 7.425em;
+				top: 1.3em;
+				--size: 0.6em;
+			}
+
+			&.shift-right::after { left: calc(7.425em + var(--offset)) }
+			&.shift-left::after { left: calc(7.425em - var(--offset)) }
+		}
+	}
+
+	d-option {
+		display: block;
+		width: fit-content;
+		position: relative;
+
+		/* Left/right */
+		&[index="0"], &[index="1"] {
+			grid-row: 1 / span 2;
+			width: fit-content;
+			top: -0.3em;
+		}
+		/* Up/down */
+		&[index="2"], &[index="3"] {
+			grid-column: 2;
+		}
+
+		&[index="0"] {
+			grid-column: 1;
+		}
+		&[index="1"] {
+			grid-column: 3;
+			justify-self: flex-end;
+		}
+		&[index="2"] {
+			grid-row: 1;
+			align-self: flex-start;
+			top: -0.1em;
+		}
+		&[index="3"] {
+			grid-row: 2;
+			align-self: flex-end;
+			bottom: -0.2em;
+		}
+
+		/* Heart-shaped hover indicator */
+		&::before {
+			left: -1.75ch;
+			top: 0.15em;
+		}
+
+		.break { display: block }
+
+		.conditional {
+			position: absolute;
+			left: calc(100% + 0.2em);
+			top: 0;
+		}
+	}
+
+	/* In compact mode, all the options get moved alongside their tabs; hide the resulting empty menu */
+	&:state(compact) { display: none }
+}
+d-option {
+	display: block;
+	cursor: pointer;
+	/* Heart-shaped hover indicator */
+	position: relative;
+
+	&:hover, &:focus,
+	&[aria-expanded=true] {
+		color: var(--yellow);
+	}
+	&::before {
+		content: "";
+		background: center / contain no-repeat;
+		width: var(--size);
+		height: var(--size);
+		position: absolute;
+		left: -0.1em;
+		top: calc(50% - (0.6 * var(--size)));
+		--size: 0.6em;
+	}
+	&:is(:hover, :focus)::before,
+	&[aria-expanded=true]::before {
+		background-image: url("../assets/images/heart.png");
+	}
+
+	/* Hide the hearts/highlights when choices are forced open */
+	d-choices:state(forced) &:not(:hover, :focus, [aria-expanded=true]) {
+		color: var(--white);
+		&::before { content: unset }
+	}
+
+	:not(d-choices) > & {
+		border-image: url("../assets/images/textbox/light_transparent.png") 16 / var(--border-width) / calc(0.75 * var(--border-width)) var(--border-width);
+		/* Spacing */
+		margin: var(--border-width);
+		& + d-option-panel + d-option { margin-block-start: calc(var(--border-width) + 0.5em) }
+		/* Heart-shaped hover indicator */
+		padding-inline-start: 1em;
+		&::before { --size: 0.6em }
+
+		.conditional {
+			float: inline-end;
+		}
+	}
+
+	.conditional {
+		color: var(--gray);
+		padding: 0.5em;
+		margin: -0.5em;
+		cursor: help;
+	}
+
+	body.compact & :is(.hide, .break) { display: none }
+}
+d-option-panel {
+	display: block;
+	border-image: url("../assets/images/textbox/light_transparent.png") 16 / var(--border-width) / var(--border-width);
+
+	&[theme=dark] { border-image-source: url("../assets/images/textbox/dark_transparent.gif") }
+
+	/* Spacing */
+	margin:
+		calc((2 * var(--border-width)) + 0.5em)
+		var(--border-width)
+		var(--border-width);
+	d-option + & {
+		margin-block:
+			calc(var(--border-width) + 0.5em)
+			calc(var(--border-width) + 0.2em);
+		&[theme=dark] {
+			margin-block:
+				calc(var(--border-width) + 0.7em)
+				calc(var(--border-width) + 0.4em);
+		}
+	}
+	&:has(+ d-option) {
+		margin-block-end: calc(var(--border-width) + 0.8em);
+		&[theme=dark] {
+			margin-block-end: calc(var(--border-width) + 1em);
+		}
+	}
+	padding: 0.1em;
+
+	.selection-label {
+		color: var(--gray);
+	}
+
+	/* Expanded mode: hide collapsed panels, and labels when panels aren't forced */
+	d-choices:not(:state(compact)) ~ &:state(collapsed),
+	d-choices:not(:state(compact)) ~ &:not(:state(forced)) .selection-label,
+	/* Compact mode: hide collapsed panels, and labels regardless (the toggles will act as labels instead) */
+	d-choices:state(compact) ~ &:state(collapsed),
+	d-choices:state(compact) ~ & .selection-label {
+		display: none;
+	}
+}
+/* #endregion */
