--- a/css/global.css
+++ b/css/global.css
@@ -50,6 +50,8 @@ h2, h3, h4, h5, h6 {
 }
 p, ul { /* General text */
 	margin-block: 0.5em;
+	&:first-child { margin-block-start: 0 }
+	&:last-child { margin-block-end: 0 }
 }
 a { /* Global links */
 	color: var(--white);
