Add icons for Sweet Cap'n Cakes/Clover dialogue
Also added corresponding examples

--- a/css/global.css
+++ b/css/global.css
@@ -446,6 +446,53 @@ d-text {
 			margin-inline-end: 1ch;
 		}
 	}
+
+	&[asterisk="Sweet"],
+	&[asterisk="Cap'n"], &[asterisk="Capn"],
+	&[asterisk="K_K"], &[asterisk="KK"],
+	&[asterisk="Happy"], &[asterisk="Nice"],
+	&[asterisk="Mad"], &[asterisk="Mean"],
+	&[asterisk="Sad"], &[asterisk="Shy"] {
+		position: relative;
+		padding-inline-start: 1.25em;
+		text-indent: unset;
+
+		&::before {
+			position: absolute;
+			left: 0;
+			top: 0;
+			content: "";
+			color: transparent;
+			width: 1em;
+			height: 1em;
+			background: center / contain no-repeat;
+		}
+	}
+
+	&:is([asterisk="Sweet"])::before {
+		background-image: url("../assets/images/faces/sweetcapncakes/sweet.gif");
+		content: "(Sweet)";
+	}
+	&:is([asterisk="Cap'n"], [asterisk="Capn"])::before {
+		background-image: url("../assets/images/faces/sweetcapncakes/capn.gif");
+		content: "(Cap'n)";
+	}
+	&:is([asterisk="K_K"], [asterisk="KK"])::before {
+		background-image: url("../assets/images/faces/sweetcapncakes/kk.gif");
+		content: "(K_K)";
+	}
+	&:is([asterisk="Happy"], [asterisk="Nice"])::before {
+		background-image: url("../assets/images/faces/clover/happy.png");
+		content: "(Nice)";
+	}
+	&:is([asterisk="Mad"], [asterisk="Mean"])::before {
+		background-image: url("../assets/images/faces/clover/mad.png");
+		content: "(Mean)";
+	}
+	&:is([asterisk="Sad"], [asterisk="Shy"])::before {
+		background-image: url("../assets/images/faces/clover/sad.png");
+		content: "(Shy)";
+	}
 }
 d-choices {
 	&:not(:state(compact)) {
