--- a/css/global.css
+++ b/css/global.css
@@ -129,13 +129,14 @@ hr {
 		transform: translate(-50%, calc(-100% - (2 * var(--border-width) + 1em)));
 	}
 }
-.visually-hidden {
+.visually-hidden,
+header.d-section:has(h1.visually-hidden:only-child) {
 	position: fixed;
 	top: -2em;
 	left: 0;
 	font-size: 1em;
-	margin: 0;
-	padding: 0;
+	margin: 0 !important;
+	padding: 0 !important;
 }
 #back404 {
 	width: calc(100% - (2 * var(--border-width)));
@@ -279,7 +280,7 @@ body {
 	flex-direction: column;
 	gap: 1em;
 
-	h1, .d-section {
+	.d-section {
 		background-color: rgb(from var(--black) r g b / 0.6);
 		backdrop-filter: blur(5px);
 		padding: 1em min(1em, 3vw);
@@ -288,8 +289,20 @@ body {
 	h1 {
 		text-align: center;
 		margin: 0;
-		padding-block: 0.5em;
+
+		&:not(:last-child) {
+			border-block-end: 0.1em solid rgb(from var(--gray) r g b / 0.1);
+		}
 	}
+}
+#pagedesc, #pagecred {
+	margin-block: 0.5em;
+
+	&:last-child { margin-block-end: 0 }
+}
+#pagecred {
+	color: var(--gray);
+	font-size: 0.9em;
 }
 /* Footer */
 #sitefoot {
