--- a/css/global.css
+++ b/css/global.css
@@ -295,7 +295,7 @@ body {
 		}
 	}
 }
-#pagedesc, #pagecred {
+#pagecred, #pagedesc, #pagesource {
 	margin-block: 0.5em;
 
 	&:last-child { margin-block-end: 0 }
