--- a/css/global.css
+++ b/css/global.css
@@ -53,7 +53,10 @@ p, ul { /* General text */
 	&:first-child { margin-block-start: 0 }
 	&:last-child { margin-block-end: 0 }
 }
-p:empty { min-height: 1em }
+p:empty {
+	min-height: 1em;
+	margin-block: 0;
+}
 a { /* Global links */
 	color: var(--white);
 	text-decoration: 0.1em solid underline;
