--- a/css/global.css
+++ b/css/global.css
@@ -298,7 +298,7 @@ body {
 		}
 	}
 }
-#pagecred, #pagedesc, #pagesource {
+#pagecred, #pagedesc, #pagesrc {
 	margin-block: 0.5em;
 
 	&:last-child { margin-block-end: 0 }
@@ -306,6 +306,12 @@ body {
 #pagecred {
 	color: var(--gray);
 	font-size: 0.9em;
+}
+#pagesrc a[href^="https://code.deltarune.wiki"] {
+	font-family: "Courier New", Courier, monospace;
+	font-weight: bold;
+	font-size: 0.8em;
+	&:not(:hover, :focus) { text-decoration: none }
 }
 /* Footer */
 #sitefoot {
