--- a/css/global.css
+++ b/css/global.css
@@ -41,13 +41,16 @@
 }
 h1, h2, h3, h4, h5, h6 { font-weight: normal }
 h2, h3, h4, h5, h6 {
-	margin-block: 0.7em;
+	margin-block: 0.7rem;
 	&:first-child { margin-block-start: 0 }
-	--adjacent-spacing: calc(var(--border-width) + 0.3em);
+	--adjacent-spacing: calc(var(--border-width) + 0.3rem);
 
 	body:not(.compact) :is(d-box, d-choices) + & { margin-block-start: var(--adjacent-spacing) }
 	body:not(.compact) &:has(+ d-box, + d-choices) { margin-block-end: var(--adjacent-spacing) }
 }
+h2 { font-size: 2em }
+h3 { font-size: 1.6em }
+h4 { font-size: 1.3em }
 p, ul { /* General text */
 	margin-block: 0.5em;
 	&:first-child { margin-block-start: 0 }
