Wrap source code filenames on narrow screens
It's all underscore-separated, so it counts as one "word" and doesn't normally break. Now forcing breaks

--- a/css/global.css
+++ b/css/global.css
@@ -320,6 +320,8 @@ body {
 	font-family: "Courier New", Courier, monospace;
 	font-weight: bold;
 	&:not(:hover, :focus) { text-decoration: none }
+	word-break: break-word;
+	text-underline-offset: auto;
 }
 /* Footer */
 #sitefoot {
