Change d-text font changer to attribute
Before, it was just d-text[small] or d-text[sans]; now there's a dedicated "font" attribute. Also, changed noelletiny's font flag from "small" to "tiny" since fnt_small (the menu font) is separate

--- a/css/global.css
+++ b/css/global.css
@@ -512,12 +512,12 @@ d-text {
 	grid-column: 2;
 	line-height: 1.4;
 
-	&[small] {
+	&[font=tiny] {
 		font-family: "DeltaFont Tiny", var(--font);
 		max-width: 55%;
 	}
 
-	&[sans] {
+	&[font=sans] {
 		font-family: "DeltaFont Comic Sans", var(--font);
 	}
 
