Remove Queen speaker color class
Only add color classes to party members/Lancer

--- a/_includes/config.html
+++ b/_includes/config.html
@@ -5,7 +5,7 @@
 		<img src="{{ '/assets/images/config/0.png' | relative_url }}" alt="" aria-hidden="true" class="active" />
 	</button>
 	<section class="d-section" id="menucontents" hidden>
-		<a href="#top">Back to top</a>
+		<a href="#sitehead">Back to top</a>
 
 		<label for="toggle-compact" class="toggle">
 			<input type="checkbox" id="toggle-compact" class="visually-hidden">
