Remove OpenDyslexia toggle (TEMP), update to-do list
Need to check font sizing against all elements… the basic fonts are already giving me so much trouble with em sizing.

--- a/_includes/config.html
+++ b/_includes/config.html
@@ -12,10 +12,12 @@
 			Compact mode
 		</label>
 
+		{%- comment %}
 		<label for="toggle-opendyslexic" class="toggle">
 			<input type="checkbox" id="toggle-opendyslexic" class="visually-hidden">
 			Use dyslexia-friendly font
 		</label>
+		{% endcomment %}
 
 		<button id="open-choices">Show all choices</button>
 	</section>
