--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,5 +9,6 @@
 		{% comment %} Placeholders {% endcomment %}
 		<a href="{{ '/chapters' | relative_url }}">Chapters</a>
 		<a href="{{ '/locations' | relative_url }}">Locations</a>
+		<a href="{{ '/misc' | relative_url }}">Miscellaneous</a>
 	</nav>
 </header>
