Reorder page source specifiers/notes

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,12 +18,13 @@ layout: default
 		<ul>
 			{%- for source in page.sources %}
 			<li>
-				<a href="{{ source.url }}">{{ source.name }}</a>
-				{%- if source.specifier != null or source.note != null %} ({% endif -%}
-				{{- source.specifier -}}
-				{%- if source.specifier != null and source.note != null %}, {% endif -%}
-				{{- source.note -}}
-				{%- if source.specifier != null or source.note != null %}){% endif -%}
+				{%- if source.specifier != null %}{{ source.specifier }} - {% endif -%}
+				{%- if source.url != null -%}
+					<a href="{{ source.url }}">{{ source.name }}</a>
+				{%- else -%}
+					<span class="code">{{ source.name }}</span>
+				{%- endif -%}
+				{%- if source.note != null %} ({{- source.note -}}){% endif -%}
 			</li>
 			{%- endfor %}
 		</ul>
