--- a/css/global.css
+++ b/css/global.css
@@ -63,9 +63,15 @@ h2, h3, h4, h5, h6 {
 	body:not(.compact) :is(d-box, d-choices) + & { margin-block-start: var(--adjacent-spacing) }
 	body:not(.compact) &:has(+ d-box, + d-choices) { margin-block-end: var(--adjacent-spacing) }
 }
-h2 { font-size: 2em }
-h3 { font-size: 1.6em }
-h4 { font-size: 1.3em }
+h1 { font-size: 2.5em }
+h2 { font-size: 2.25em }
+h3 { font-size: 2em }
+h4 { font-size: 1.5em }
+h5 { font-size: 1.2em }
+h6 {
+	font-size: 1em;
+	color: var(--gray);
+}
 /* General text */
 p, ul { margin-block: 0.5em }
 li { margin-block: 0.2em }
