--- a/css/global.css
+++ b/css/global.css
@@ -335,7 +335,8 @@ body {
 	color: var(--gray);
 	font-size: 0.9em;
 }
-#pagesrc a[href^="https://code.deltarune.wiki"] {
+#pagesrc a[href^="https://code.deltarune.wiki"],
+#pagesrc .code {
 	font-family: "Courier New", Courier, monospace;
 	font-weight: bold;
 	&:not(:hover, :focus) { text-decoration: none }
