--- a/css/global.css
+++ b/css/global.css
@@ -62,7 +62,7 @@ h4 { font-size: 1.5em }
 h5 { font-size: 1.2em }
 h6 {
 	font-size: 1em;
-	color: var(--gray);
+	color: color-mix(in srgb, var(--white), var(--gray));
 }
 /* General text */
 p, ul { margin-block: 0.5em }
