Add trailing slash to category links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
 
 	<nav id="sitenav">
 		{% comment %} Placeholders {% endcomment %}
-		<a href="{{ '/chapters' | relative_url }}">Chapters</a>
-		<a href="{{ '/locations' | relative_url }}">Locations</a>
-		<a href="{{ '/misc' | relative_url }}">Miscellaneous</a>
+		<a href="{{ '/chapters/' | relative_url }}">Chapters</a>
+		<a href="{{ '/locations/' | relative_url }}">Locations</a>
+		<a href="{{ '/misc/' | relative_url }}">Miscellaneous</a>
 	</nav>
 </header>
